# carlos_experiment

./: CMakeLists.txt  README.md  data.csv  package.xml
launch/: carlos_experiment.launch  carlos_experiment.launch~
src/: carlos_experiment.cpp  carlos_experiment_diff_init.cpp  carlos_experiment_light.cpp  carlos_experiment_light_test.cpp  carlos_experiment_revised.cpp  plot_trajectories.py
world/cube/: model.sdf
world/table/: model-1_4.sdf  model.sdf
