<?xml version="1.0"?>
<package>
  <name>carlos_experiment</name>
  <version>0.0.0</version>
  <description>The carlos_experiment package</description>

  <maintainer email="ghanim@todo.todo">ghanim</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>descartes_core</build_depend>
  <build_depend>descartes_moveit</build_depend>
  <build_depend>descartes_planner</build_depend>
  <build_depend>descartes_trajectory</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <run_depend>descartes_core</run_depend>
  <run_depend>descartes_moveit</run_depend>
  <run_depend>descartes_planner</run_depend>
  <run_depend>descartes_trajectory</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
